--- a/gcc/config.in
+++ b/gcc/config.in
@@ -2237,6 +2237,11 @@
 #undef LINKER_HASH_STYLE
 #endif
 
+/* The linker default RPATH */
+#ifndef USED_FOR_TARGET
+#undef LINKER_RPATH
+#endif
+
 
 /* Define to the name of the LTO plugin DSO that must be passed to the
    linker's -plugin=LIB option. */
