--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -4401,8 +4401,8 @@ install-po:
 	  dir=$(localedir)/$$lang/LC_MESSAGES; \
 	  echo $(mkinstalldirs) $(DESTDIR)$$dir; \
 	  $(mkinstalldirs) $(DESTDIR)$$dir || exit 1; \
-	  echo $(INSTALL_DATA) $$cat $(DESTDIR)$$dir/gcc.mo; \
-	  $(INSTALL_DATA) $$cat $(DESTDIR)$$dir/gcc.mo; \
+	  echo $(INSTALL_DATA) $$cat $(DESTDIR)$$dir/gcc-13.mo; \
+	  $(INSTALL_DATA) $$cat $(DESTDIR)$$dir/gcc-13.mo; \
 	done
 
 # Rule for regenerating the message template (gcc.pot).
