libgo-cleanfiles.diff

--- a/libgo/Makefile.in
+++ b/libgo/Makefile.in
@@ -1205,7 +1205,9 @@ MOSTLYCLEANFILES = \
 	libcalls-list \
 	runtime.inc runtime.inc.tmp2 runtime.inc.tmp3 runtime.inc.raw
 
-CLEANFILES = *.go *.c s-* libgo.sum libgo.log runtime.inc
+CLEANFILES = *.go *.c s-* libgo.sum libgo.log runtime.inc \
+	*.dep */*.dep */*/*.dep */*/*/*.dep */*/*.dep */*/*/*/*.dep \
+	*/*/*/*/*/*.dep
 MULTISRCTOP = 
 MULTIBUILDTOP = 
 MULTIDIRS = 
