gcc-force-cross-layout.diff
# DP: Add FORCE_CROSS_LAYOUT env var to force a cross directory layout.

--- a/configure.ac
+++ b/configure.ac
@@ -3302,7 +3302,7 @@ target_configargs="$target_configargs ${tbaseargs}"
 # native.  However, it would be better to use other mechanisms to make the
 # sorts of decisions they want to make on this basis.  Please consider
 # this option to be deprecated.  FIXME.
-if test x${is_cross_compiler} = xyes ; then
+if test x${is_cross_compiler} = xyes || test x${FORCE_CROSS_LAYOUT} = xyes; then
   target_configargs="--with-cross-host=${host_noncanonical} ${target_configargs}"
 fi
 
